added application comments

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 					<li><span class="icon solid fa-sync"><span class="label">Process</span></span></li>
 					<li><span class="icon solid fa-cloud"><span class="label">Upload</span></span></li>
 				</ul> -->
+
+				<!-- lumber calculation table-->
 			</section>
 			<h5>Alternate</h5>
 			<div class="table-wrapper">
