removed repeated place holders based on feedback

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<tbody>
 						<tr id="row1">
 							<td>1</td>
-							<td><div><input type="text" placeholder="Pine Boards"></div></td>
+							<td><div><input type="text" placeholder="pine Boards" ></div></td>
 							<td><div><input class="hight" type="text" placeholder="5"></div></td>
 							<td><div><input class="width" type="text" placeholder="15"></div></td>
 							<td><div><input class="length" type="text" placeholder="400"></div></td>
@@ -74,101 +74,101 @@
 						</tr>
 						<tr id="row2">
 							<td>2</td>
-							<td><div><input type="text" placeholder="Pine Boards"></div></td>
-							<td><div><input class="hight" type="text" placeholder="5"></div></td>
-							<td><div><input class="width" type="text" placeholder="15"></div></td>
-							<td><div><input class="length" type="text" placeholder="400"></div></td>
-							<td><div><input  class="quantity" type="text" placeholder="14"></div></td>
+							<td><div><input type="text" ></div></td>
+							<td><div><input class="hight" type="text" ></div></td>
+							<td><div><input class="width" type="text" ></div></td>
+							<td><div><input class="length" type="text" ></div></td>
+							<td><div><input  class="quantity" type="text" ></div></td>
 							<td class="totalVolume">--- m3</td>
-							<td><div><input class="price" type="text" placeholder="5500"></div></td>
+							<td><div><input class="price" type="text" ></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<tr id="row3">
 							<td>3</td>
-							<td><div><input type="text" placeholder="Pine Boards"></div></td>
-							<td><div><input class="hight" type="text" placeholder="5"></div></td>
-							<td><div><input class="width" type="text" placeholder="15"></div></td>
-							<td><div><input class="length" type="text" placeholder="400"></div></td>
-							<td><div><input  class="quantity" type="text" placeholder="14"></div></td>
+							<td><div><input type="text" ></div></td>
+							<td><div><input class="hight" type="text" ></div></td>
+							<td><div><input class="width" type="text" ></div></td>
+							<td><div><input class="length" type="text" ></div></td>
+							<td><div><input  class="quantity" type="text" ></div></td>
 							<td class="totalVolume">--- m3</td>
-							<td><div><input class="price" type="text" placeholder="5500"></div></td>
+							<td><div><input class="price" type="text" ></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<tr id="row4">
 							<td>4</td>
-							<td><div><input type="text" placeholder="Pine Boards"></div></td>
-							<td><div><input class="hight" type="text" placeholder="5"></div></td>
-							<td><div><input class="width" type="text" placeholder="15"></div></td>
-							<td><div><input class="length" type="text" placeholder="400"></div></td>
-							<td><div><input  class="quantity" type="text" placeholder="14"></div></td>
+							<td><div><input type="text" ></div></td>
+							<td><div><input class="hight" type="text" ></div></td>
+							<td><div><input class="width" type="text" ></div></td>
+							<td><div><input class="length" type="text" ></div></td>
+							<td><div><input  class="quantity" type="text" ></div></td>
 							<td class="totalVolume">--- m3</td>
-							<td><div><input class="price" type="text" placeholder="5500"></div></td>
+							<td><div><input class="price" type="text" ></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<tr id="row5">
 							<td>5</td>
-							<td><div><input type="text" placeholder="Pine Boards"></div></td>
-							<td><div><input class="hight" type="text" placeholder="5"></div></td>
-							<td><div><input class="width" type="text" placeholder="15"></div></td>
-							<td><div><input class="length" type="text" placeholder="400"></div></td>
-							<td><div><input  class="quantity" type="text" placeholder="14"></div></td>
+							<td><div><input type="text" ></div></td>
+							<td><div><input class="hight" type="text" ></div></td>
+							<td><div><input class="width" type="text" ></div></td>
+							<td><div><input class="length" type="text" ></div></td>
+							<td><div><input  class="quantity" type="text" ></div></td>
 							<td class="totalVolume">--- m3</td>
-							<td><div><input class="price" type="text" placeholder="5500"></div></td>
+							<td><div><input class="price" type="text" ></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<tr id="row6">
 							<td>6</td>
-							<td><div><input type="text" placeholder="Pine Boards"></div></td>
-							<td><div><input class="hight" type="text" placeholder="5"></div></td>
-							<td><div><input class="width" type="text" placeholder="15"></div></td>
-							<td><div><input class="length" type="text" placeholder="400"></div></td>
-							<td><div><input  class="quantity" type="text" placeholder="14"></div></td>
+							<td><div><input type="text" ></div></td>
+							<td><div><input class="hight" type="text" ></div></td>
+							<td><div><input class="width" type="text" ></div></td>
+							<td><div><input class="length" type="text" ></div></td>
+							<td><div><input  class="quantity" type="text" ></div></td>
 							<td class="totalVolume">--- m3</td>
-							<td><div><input class="price" type="text" placeholder="5500"></div></td>
+							<td><div><input class="price" type="text" ></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<tr id="row7">
 							<td>7</td>
-							<td><div><input type="text" placeholder="Pine Boards"></div></td>
-							<td><div><input class="hight" type="text" placeholder="5"></div></td>
-							<td><div><input class="width" type="text" placeholder="15"></div></td>
-							<td><div><input class="length" type="text" placeholder="400"></div></td>
-							<td><div><input  class="quantity" type="text" placeholder="14"></div></td>
+							<td><div><input type="text" ></div></td>
+							<td><div><input class="hight" type="text" ></div></td>
+							<td><div><input class="width" type="text" ></div></td>
+							<td><div><input class="length" type="text" ></div></td>
+							<td><div><input  class="quantity" type="text" ></div></td>
 							<td class="totalVolume">--- m3</td>
-							<td><div><input class="price" type="text" placeholder="5500"></div></td>
+							<td><div><input class="price" type="text" ></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<tr id="row8">
 							<td>8</td>
-							<td><div><input type="text" placeholder="Pine Boards"></div></td>
-							<td><div><input class="hight" type="text" placeholder="5"></div></td>
-							<td><div><input class="width" type="text" placeholder="15"></div></td>
-							<td><div><input class="length" type="text" placeholder="400"></div></td>
-							<td><div><input  class="quantity" type="text" placeholder="14"></div></td>
+							<td><div><input type="text" ></div></td>
+							<td><div><input class="hight" type="text" ></div></td>
+							<td><div><input class="width" type="text" ></div></td>
+							<td><div><input class="length" type="text" ></div></td>
+							<td><div><input  class="quantity" type="text" ></div></td>
 							<td class="totalVolume">--- m3</td>
-							<td><div><input class="price" type="text" placeholder="5500"></div></td>
+							<td><div><input class="price" type="text" ></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<tr id="row9">
 							<td>9</td>
-							<td><div><input type="text" placeholder="Pine Boards"></div></td>
-							<td><div><input class="hight" type="text" placeholder="5"></div></td>
-							<td><div><input class="width" type="text" placeholder="15"></div></td>
-							<td><div><input class="length" type="text" placeholder="400"></div></td>
-							<td><div><input  class="quantity" type="text" placeholder="14"></div></td>
+							<td><div><input type="text" ></div></td>
+							<td><div><input class="hight" type="text" ></div></td>
+							<td><div><input class="width" type="text" ></div></td>
+							<td><div><input class="length" type="text" ></div></td>
+							<td><div><input  class="quantity" type="text" ></div></td>
 							<td class="totalVolume">--- m3</td>
-							<td><div><input class="price" type="text" placeholder="5500"></div></td>
+							<td><div><input class="price" type="text" ></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<tr id="row10">
 							<td>10</td>
-							<td><div><input type="text" placeholder="Pine Boards"></div></td>
-							<td><div><input class="hight" type="text" placeholder="5"></div></td>
-							<td><div><input class="width" type="text" placeholder="15"></div></td>
-							<td><div><input class="length" type="text" placeholder="400"></div></td>
-							<td><div><input  class="quantity" type="text" placeholder="14"></div></td>
+							<td><div><input type="text" ></div></td>
+							<td><div><input class="hight" type="text" ></div></td>
+							<td><div><input class="width" type="text" ></div></td>
+							<td><div><input class="length" type="text" ></div></td>
+							<td><div><input  class="quantity" type="text" ></div></td>
 							<td class="totalVolume">--- m3</td>
-							<td><div><input class="price" type="text" placeholder="5500"></div></td>
+							<td><div><input class="price" type="text" ></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<!--add per item charge lines e.g delivery trip-->
@@ -197,16 +197,16 @@
 						</tr>
 						<tr id="rowA2">
 							<td>A2</td>
-							<td colspan="4"><div><input type="text" placeholder="Delivery Trip"></div></td>
-							<td colspan="2"><div><input  class="quantity" type="text" placeholder="1"></div></td>
-							<td><div><input class="price" type="text" placeholder="3000"></div></td>
+							<td colspan="4"><div><input type="text"></div></td>
+							<td colspan="2"><div><input  class="quantity" type="text"></div></td>
+							<td><div><input class="price" type="text"></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<tr id="rowA3">
 							<td>A3</td>
-							<td colspan="4"><div><input type="text" placeholder="Delivery Trip"></div></td>
-							<td colspan="2"><div><input  class="quantity" type="text" placeholder="1"></div></td>
-							<td><div><input class="price" type="text" placeholder="3000"></div></td>
+							<td colspan="4"><div><input type="text"></div></td>
+							<td colspan="2"><div><input  class="quantity" type="text"></div></td>
+							<td><div><input class="price" type="text"></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 					</tbody>
