added more calculated rows for additional itmes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
 				<!-- lumber calculation table-->
 			</section>
-			<h5>Alternate</h5>
 			<div class="table-wrapper">
 				<table class="alt">
 					<thead>
@@ -189,21 +188,49 @@
 							</tr>
 						</thead>
 						<tr id="rowA1">
-							<td>A1</td>
+							<td>A-1</td>
 							<td colspan="4"><div><input type="text" placeholder="Delivery Trip"></div></td>
 							<td colspan="2"><div><input  class="quantity" type="text" placeholder="1"></div></td>
 							<td><div><input class="price" type="text" placeholder="3000"></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<tr id="rowA2">
-							<td>A2</td>
+							<td>A-2</td>
 							<td colspan="4"><div><input type="text"></div></td>
 							<td colspan="2"><div><input  class="quantity" type="text"></div></td>
 							<td><div><input class="price" type="text"></div></td>
 							<td class="lineTotal">---</td>
 						</tr>
 						<tr id="rowA3">
-							<td>A3</td>
+							<td>A-3</td>
+							<td colspan="4"><div><input type="text"></div></td>
+							<td colspan="2"><div><input  class="quantity" type="text"></div></td>
+							<td><div><input class="price" type="text"></div></td>
+							<td class="lineTotal">---</td>
+						</tr>
+						<tr id="rowA4">
+							<td>A-4</td>
+							<td colspan="4"><div><input type="text"></div></td>
+							<td colspan="2"><div><input  class="quantity" type="text"></div></td>
+							<td><div><input class="price" type="text"></div></td>
+							<td class="lineTotal">---</td>
+						</tr>
+						<tr id="rowA5">
+							<td>A-5</td>
+							<td colspan="4"><div><input type="text"></div></td>
+							<td colspan="2"><div><input  class="quantity" type="text"></div></td>
+							<td><div><input class="price" type="text"></div></td>
+							<td class="lineTotal">---</td>
+						</tr>
+						<tr id="rowA6">
+							<td>A-6</td>
+							<td colspan="4"><div><input type="text"></div></td>
+							<td colspan="2"><div><input  class="quantity" type="text"></div></td>
+							<td><div><input class="price" type="text"></div></td>
+							<td class="lineTotal">---</td>
+						</tr>
+						<tr id="rowA7">
+							<td>A-7</td>
 							<td colspan="4"><div><input type="text"></div></td>
 							<td colspan="2"><div><input  class="quantity" type="text"></div></td>
 							<td><div><input class="price" type="text"></div></td>
