--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<ul class="actions">
 						<!-- <li><a href="#" class="button primary icon solid fa-download">Download</a></li> -->
 						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Calculate</a></li>
+						<li><a href="large.html" class="button icon solid fa-chevron-right scrolly">Larger Version</a></li>
 					</ul>
 				</div>
 				<!-- <div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div> -->
@@ -258,8 +259,14 @@
 				</table>
 			</div>
 		</section>
+		<section id="one" class="wrapper style2 special">
+			<header class="major">
+				<a  id="full-view" class="button hidden">Full view</a>
+				<a id="print-view" class="button primary">Print view</a>
+		</section>
+		
 		<!-- Two -->
-			<!-- <section id="two" class="wrapper">
+			 <!-- <section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
 						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
@@ -292,10 +299,10 @@
 						</ul>
 					</section>
 				</div>
-			</section> -->
+			</section>  -->
 
 		<!-- Three -->
-			<!-- <section id="three" class="wrapper style2 special">
+			 <!-- <section id="three" class="wrapper style2 special">
 				<header class="major">
 					<h2>Magna leo sapien gravida</h2>
 					<p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
@@ -305,11 +312,11 @@
 					<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul>
-			</section> -->
+			</section>  -->
 
 		<!-- Four -->
 		
-			<!-- <section id="four" class="wrapper">
+			 <!-- <section id="four" class="wrapper">
 				<div class="inner">
 
 					<header class="major">
@@ -388,8 +395,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								</ul>
 							</div>
-						</div> -->
-						<!-- <h5>Actions</h5>
+						</div> 
+						 <h5>Actions</h5>
 						<div class="row">
 							<div class="col-6 col-12-medium">
 								<ul class="actions">
@@ -578,7 +585,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</section>
 
 				</div>
-			</section> -->
+			</section>  -->
 		
 
 		<!-- Footer -->
